k3s/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-web
  namespace: mealie
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: "http"
      port: 9925
      targetPort: 9000
