k3s/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: mealie
spec:
  rules:
  - host: mealie.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-web
            port:
              number: 9925
